name: el-debug
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
synopsis: debug tracing, like Debug.Trace
description:
    This is an extended version of Debug.Trace.  Extracted from Karya's
    Util.Debug.

category: Haskell, Debug
license: BSD3
license-file: LICENSE
author: Evan Laforge
maintainer: Evan Laforge <qdunkan@gmail.com>
stability: stable
tested-with: GHC>=8.0.2
data-files:
source-repository head
    type: git
    location: git://github.com/elaforge/el-debug.git

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wno-type-defaults
    build-depends:
        base >= 4.9 && < 4.12
        , pretty-show
        , mtl
        , text
        , deepseq
    exposed-modules:
        EL.Debug
